--- a/scripts/system/Makefile
+++ b/scripts/system/Makefile
@@ -1,18 +1,22 @@
 all: install
 
-install: gdal vim tippecanoe nodejs yarn
+install: upgrade gdal vim tippecanoe nodejs yarn kubo docker
+
+upgrade:
+	@echo upgrade
+	apt update
+	apt dist-upgrade -y
 
 gdal:
 	@echo install gdal/ogr, vim
-	apt update
 	apt install -y gdal-bin
+
 vim:
 	@echo install vim
-	apt update
 	apt install -y vim
+
 tippecanoe:
 	@echo install tippecanoe dependencies
-	apt update
 	apt install -y build-essential libsqlite3-dev zlib1g-dev
 	@echo install tippecanoe
 	wget https://github.com/felt/tippecanoe/archive/refs/tags/2.35.0.tar.gz
@@ -20,15 +24,16 @@ tippecanoe:
 	cd tippecanoe-2.35.0; make; make install
 	rm 2.35.0.tar.gz
 	rm -fr tippecanoe-2.35.0
+
 nodejs:
 	@echo install nodejs
-	apt update
 	apt install -y ca-certificates curl gnupg
 	mkdir -p /etc/apt/keyrings
 	curl -fsSL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | gpg --dearmor -o /etc/apt/keyrings/nodesource.gpg
 	echo "deb [signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_20.x nodistro main" | tee /etc/apt/sources.list.d/nodesource.list
 	apt update
 	apt install nodejs -y
+
 yarn:
 	@echo install yarn
 	curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
@@ -42,3 +47,13 @@ kubo:
 	tar zxf kubo_v0.24.0_linux-amd64.tar.gz
 	sh kubo/install.sh
 	rm -fr kubo*
+
+docker:
+	@echo install docker
+	apt install -y docker.io
+	mkdir -p $(HOME)/.docker/cli-plugins
+	curl -SL https://github.com/docker/compose/releases/download/v2.23.0/docker-compose-linux-aarch64 -o $(HOME)/.docker/cli-plugins/docker-compose
+	chown -R $(USER):$(USER) $(HOME)/.docker
+	usermod -aG docker $(USER)
+	rm -fr OME
+
