--- a/scripts/vector_tile/style.yml
+++ b/scripts/vector_tile/style.yml
@@ -6,9 +6,16 @@ sources:
   global_map:
     type: vector
     url: pmtiles://https://tile.openstreetmap.jp/static/lka.pmtiles
+center:
+  - 80.476
+  - 7.919
+zoom: 7.5
 sprite: https://tile.openstreetmap.jp/styles/osm-bright/sprite
 glyphs: https://tile.openstreetmap.jp/fonts/{fontstack}/{range}.pbf
 layers:
   - !!inc/file layers/background.yml
   - !!inc/file layers/polbnda.yml
+  - !!inc/file layers/roadl-primary.yml
+  - !!inc/file layers/roadl-secondary.yml
+  - !!inc/file layers/airp.yml
 id: 06qove9mi
